--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d8dbba">  <td>18/10/13 07:57:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2050404090</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>18/10/13 07:57:09</td>   <td>4140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyForgotPwdLinkPresentTest()[pri:3, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">verifyForgotPwdLinkPresentTest</td> 
-  <td>main@2050404090</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>18/10/13 07:57:09</td>   <td>4763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2050404090</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:25</td>   <td>13961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
+  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:30</td>   <td>18916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:30</td>   <td>19042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:42</td>   <td>31364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
+  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:49</td>   <td>38330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:05:49</td>   <td>38457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:06:01</td>   <td>50468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
+  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:06:08</td>   <td>57053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:06:08</td>   <td>57169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:06:22</td>   <td>71209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
+  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="949d71">  <td>18/10/18 08:06:27</td>   <td>76509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
 </table>
