updates test cases

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
-  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:42</td>   <td>17403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
-  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:06:01</td>   <td>36507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
-  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:06:22</td>   <td>57248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.createContactTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">createContactTest</td> 
-  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:11</td>   <td>-13961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:30</td>   <td>5081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:49</td>   <td>24496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:06:08</td>   <td>43208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:30</td>   <td>4955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:05:49</td>   <td>24369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:06:08</td>   <td>43092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
-<tr bgcolor="949d71">  <td>18/10/18 08:06:27</td>   <td>62548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.qa.xyz.tests.ContactsPageTest@42eca56e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@802581203</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/10/20 13:46:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:2, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">loginTest</td> 
+  <td>main@2050404090</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/10/20 13:46:03</td>   <td>-90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2050404090</td>   <td></td> </tr>
 </table>
